--- a/app/src/main/res/layout/fragment_statistics.xml
+++ b/app/src/main/res/layout/fragment_statistics.xml
@@ -5,10 +5,68 @@
     android:layout_height="match_parent"
     tools:context=".Fragments.StatisticsFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <LinearLayout
+        xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="statistics" />
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:padding="16dp">
+
+        <TextView
+            android:id="@+id/totalExamesDone"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Total Exames Feitos: 0"
+            android:textSize="16sp"/>
+
+        <TextView
+            android:id="@+id/totalExamesPass"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Total Exames Passados: 0"
+            android:textSize="16sp"/>
+
+        <TextView
+            android:id="@+id/totalExamesFail"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Total Exames Falhados: 0"
+            android:textSize="16sp"/>
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="8dp"
+            android:background="#CCCCCC"/>
+
+        <TextView
+            android:id="@+id/totalQuestionsDone"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Total Perguntas Respondidas: 0"
+            android:textSize="16sp"/>
+
+        <TextView
+            android:id="@+id/totalQuestionsUnDone"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Total Perguntas Não Respondidas: 0"
+            android:textSize="16sp"/>
+
+        <TextView
+            android:id="@+id/totalQuestionsCorrect"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Total Respostas Corretas: 0"
+            android:textSize="16sp"/>
+
+        <TextView
+            android:id="@+id/totalQuestionsIncorrect"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Total Respostas Incorretas: 0"
+            android:textSize="16sp"/>
+
+    </LinearLayout>
+
 
 </FrameLayout>
